<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_16dp_top_corners"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_16sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/inter_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/how_to_connect"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:includeFontPadding="false"
            android:lines="1"
            android:text="1."
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:includeFontPadding="false"
            android:text="@string/how_to_connect_des_01"
            android:textColor="#334B59"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:includeFontPadding="false"
            android:lines="1"
            android:text="2."
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:includeFontPadding="false"
            android:text="@string/how_to_connect_des_02"
            android:textColor="#334B59"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:includeFontPadding="false"
            android:lines="1"
            android:text="3."
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:includeFontPadding="false"
            android:text="@string/how_to_connect_des_03"
            android:textColor="#334B59"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

    <TextView
        android:id="@+id/iGotItTxt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/bg_10dp_primary"
        android:fontFamily="@font/inter_medium"
        android:foreground="@drawable/ripple_10dp_black"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/i_got_it"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp" />

</LinearLayout>