<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    android:background="@drawable/bg_14dp_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/inter_semi_bold"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/info"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/inter_regular"
            android:text="@string/name"
            android:textColor="#828282"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/fileNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="@font/inter_regular"
            android:textColor="#1C1B1B"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/inter_regular"
            android:text="@string/size"
            android:textColor="#828282"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/fileSizeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="@font/inter_regular"
            android:textColor="#1C1B1B"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fileResolutionLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/inter_regular"
            android:text="@string/resolution"
            android:textColor="#828282"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/fileResolutionTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="@font/inter_regular"
            android:textColor="#1C1B1B"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/inter_regular"
            android:text="@string/path"
            android:textColor="#828282"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/filePathTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="@font/inter_regular"
            android:maxLines="3"
            android:textColor="#1C1B1B"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

</LinearLayout>
