<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    android:background="@drawable/bg_14dp_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/inter_medium"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/pairing_with_tv"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:fontFamily="@font/inter_regular"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/please_confirm_the_connection_on_your_tv"
        android:textColor="#707070"
        android:textSize="@dimen/_12ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_14sdp"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/okCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:foreground="@drawable/ripple_10dp_black"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="0dp"
            app:strokeWidth="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/urbanist_semi_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cancelCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:foreground="@drawable/ripple_10dp_primary"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="0dp"
            app:strokeColor="#D0D5DD"
            app:strokeWidth="@dimen/_1sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/urbanist_semi_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</LinearLayout>
