<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".Activity.ActivityPermission">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/inter_semi_bold"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/permission"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:adjustViewBounds="true"
                android:src="@drawable/permission_img" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/for_this_application"
                android:textColor="#707070"
                android:textSize="@dimen/_11ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_permission_des">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_34sdp"
                    android:layout_height="@dimen/_34sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/permission_image_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:text="@string/image"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:maxLines="2"
                        android:text="@string/image_from_external_storage"
                        android:textColor="#707070"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_permission_des">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_34sdp"
                    android:layout_height="@dimen/_34sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/permission_audio_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:text="@string/audio"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:maxLines="2"
                        android:text="@string/audio_from_external_storage"
                        android:textColor="#707070"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_permission_des">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_34sdp"
                    android:layout_height="@dimen/_34sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/permission_video_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:text="@string/video"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:maxLines="2"
                        android:text="@string/video_from_external_storage"
                        android:textColor="#707070"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/allPermissionsTxt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/bg_10dp_primary"
        android:fontFamily="@font/inter_semi_bold"
        android:foreground="@drawable/ripple_10dp_black"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/allow_permissions"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp" />

    <include
        android:id="@+id/llAds"
        layout="@layout/ad_holder_native_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>